# multi-agent-pipeline

./: .env.example  .gitignore  AGENT_CATALOG.md  README.md  pyproject.toml
.agent_catalog/: catalog.json
dashboard/: app.py
docs/: CHEATSHEET.md  PLAN-v1-coding-benchmark.md  PLAN.md  generate_pipeline_diagram.py
src/: _retry.py  cli.py  config.py  schemas.py
src/agents/: answerer.py  complexity_router.py  generator.py  judge.py  locator.py  planner.py  router.py  verifier.py
src/apply/: applier.py
src/catalog/: catalog_md.py  indexer.py  summarizer.py  symbols.py  updater.py  walker.py
src/execution/: sandbox.py
src/hitl/: gate.py
src/metrics/: report.py
src/pipeline/: verifier_panel.py
src/storage/: db.py  models.py  persist.py
tests/: test_agents_router_locator.py  test_answerer.py  test_applier.py  test_catalog_unit.py  test_complexity_router.py  test_generator.py  test_hitl_gate.py  test_indexer.py  test_metrics.py  test_planner.py  test_retry.py  test_sandbox.py  test_schemas.py  test_schemas_v2.py  test_storage.py  test_updater.py  test_verifier_panel.py
