[project]
name = "multi-agent-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.50",
    "pandas>=3.0.3",
    "pathspec>=1.1.1",
    "pydantic-ai>=1.98.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "streamlit>=1.57.0",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
